Finish basic styling

--- a/src/components/leaderboard.css
+++ b/src/components/leaderboard.css
@@ -1,9 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 
+.leaderboard-page {
+    width: 100vw;
+    margin: auto;
+    justify-content: center;
+    background-color: ivory;
+}
+
 .lead-head-cont {
     display: flex;
     flex-direction: column;
     margin: auto;
+    justify-content: center;
+    justify-items: center;
+}
+
+.lead-item-main {
+    width: 100vw;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .lead-title {
@@ -13,6 +30,47 @@
 
 .lead-years {
     font-family: 'Righteous';
+    margin: auto
 }
 
+.year-cont {
+    display: flex;
+    margin: auto;
+    justify-content: space-between;
+    background-color: rgba(5, 5, 78, 0.442);
+}
 
+.lead-item-name {
+    font-family: 'Righteous';
+    margin: auto;
+    font-size: 1rem;
+}
+
+.lead-item-img {
+    height: 8rem;
+    width: 8rem;
+}
+
+.table {
+    font-family: 'Righteous';
+    background-color: white;
+    border-radius: 0 0 15px 15px;
+    width: 100vw;
+    margin: auto;
+}
+
+.t-head {
+    color: white;
+    background-color: black;
+    border-radius: 15px;
+}
+
+tbody tr:nth-child(odd){
+    background-color: #abc6f6;
+    color: #fff;
+}
+
+.back-btn {
+    padding: 2rem;
+    align-self: center;
+}
