--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,17 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 
 .header-cont {
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    font-family: 'Righteous';
-    color: white;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  font-family: 'Righteous', sans-serif;
+  color: white;
 }
 
 .title-cont {
-    margin: auto;
+  margin: auto;
 }
 
 .num-cont {
-    margin: auto;
+  margin: auto;
 }
