--- a/src/components/card.css
+++ b/src/components/card.css
@@ -6,7 +6,7 @@
   align-items: center;
   background: rgb(251, 63, 240);
   background: radial-gradient(circle, rgba(251, 63, 240, 0.35898109243697474) 0%, rgba(252, 70, 107, 0.3925945378151261) 68%);
-  font-family: Verdana, sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   border-radius: 35px 0 35px 0;
   border-color: transparent;
 }
