--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,17 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100&display=swap');
 
 .header-cont {
   margin: auto;
   display: flex;
   flex-direction: column;
-  font-family: 'Righteous', sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: white;
 }
 
 .title-cont {
   margin: auto;
+  font-family: 'Lato', sans-serif;
 }
 
 .num-cont {
   margin: auto;
+  font-family: 'Lato', sans-serif;
 }
