--- a/src/components/home.css
+++ b/src/components/home.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100&display=swap');
+
 .main-container {
   width: 100vw;
 }
@@ -9,7 +11,7 @@
 }
 
 .search {
-  font-family: Verdana, sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif, sans-serif;
   padding: 0.5rem;
   margin-top: 1rem;
   margin-bottom: 2rem;
