--- a/src/components/leaderboard.css
+++ b/src/components/leaderboard.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100&display=swap');
 
 .leaderboard-page {
   width: 100vw;
@@ -25,11 +25,11 @@
 
 .lead-title {
   margin: auto;
-  font-family: 'Righteous', sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 .lead-years {
-  font-family: 'Righteous', sans-serif;
+  font-family: 'Lato', sans-serif;
   margin: auto;
 }
 
@@ -41,7 +41,7 @@
 }
 
 .lead-item-name {
-  font-family: 'Righteous', sans-serif;
+  font-family: 'Lato', sans-serif;
   margin: auto;
   font-size: 1rem;
 }
@@ -52,7 +52,7 @@
 }
 
 .table {
-  font-family: 'Righteous', sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   background-color: white;
   border-radius: 0 0 15px 15px;
   width: 100vw;
@@ -63,6 +63,7 @@
   color: white;
   background-color: black;
   border-radius: 15px;
+  font-family: ;
 }
 
 tbody tr:nth-child(odd) {
