Fix stylelint issues

--- a/src/components/home.css
+++ b/src/components/home.css
@@ -11,7 +11,7 @@
 }
 
 .search {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif, sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   padding: 0.5rem;
   margin-top: 1rem;
   margin-bottom: 2rem;
