--- a/src/components/leaderboard.css
+++ b/src/components/leaderboard.css
@@ -63,7 +63,7 @@
   color: white;
   background-color: black;
   border-radius: 15px;
-  font-family: ;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 tbody tr:nth-child(odd) {
